<resources>
    <string name="app_name">DemoCode</string>
    <!--for google sign in-->
    <string name="web_client_id">119325030001-di0rga6e3ck9tkkv26kthk4i09rpv075.apps.googleusercontent.com</string>
    <string name="title_activity_splash">SplashActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="error_generic">Something went wrong</string>
    <string name="error_email">Email can not be empty</string>
    <string name="error_invalid_email">Please enter valid Email</string>
    <string name="error_password_empty">Password can not be empty</string>
    <string name="error_password_min_char">Password is not less than 2 char</string>
    <string name="error_first_name_empty">First name can not be empty</string>
    <string name="error_last_name_empty">Last name can not be empty</string>
    <string name="error_mobile_number_empty">Phone number can not be empty</string>
    <string name="error_mobile_number_length">Phone number must be 10 digit</string>
    <string name="hint_email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_text"><u>Login</u></string>
    <string name="welcome_back">Welcome back</string>
    <string name="welcome_back_please_entry_your_details">Welcome back!Please entry your details.</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone">Phone</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up_for_free"><u>Sign up for free</u></string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="home">Home</string>
    <string name="feature_not_available">This feature is currently not available in the demo code</string>
    <string name="sign_up_success_message">Your account has been created.\nPlease login using same credential.</string>
    <string name="yes">Yes</string>
    <string name="continue_text">Continue</string>
    <string name="no">No</string>
    <string name="logout_confirmation_message">Are you sure you want to log out?</string>
    <string name="internet_connection_lost">Internet connection lost</string>
    <string name="try_again">Try again</string>
    <string name="loading">Loading</string>
    <string name="please_wait">Please wait &#8230;</string>

</resources>